rewording landing page text

--- a/index.html
+++ b/index.html
@@ -54,14 +54,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
-					<h1>Make your landing page<br/>
-					look really good.</h1>
-					<form class="form-inline" role="form">
-					  <div class="form-group">
-					    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">
-					  </div>
-					  <button type="submit" class="btn btn-warning btn-lg">Invite Me!</button>
-					</form>					
+					<h1>This is Happy Meter.</h1>			
 				</div><!-- /col-lg-6 -->
 				<div class="col-lg-6">
 					<img class="img-responsive" src="assets/img/ipad-hand.png" alt="">
@@ -75,29 +68,35 @@
 	<div class="container">
 		<div class="row mt centered">
 			<div class="col-lg-6 col-lg-offset-3">
-				<h1>Your Landing Page<br/>Looks Wonderful Now.</h1>
-				<h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
+				<h1>Employee Satisfaction Info<br/>At your fingertips.</h1>
+				<h3>Happy meter determines how confident employees are in their
+					success by asking 2 simple questions.</h3>
 			</div>
 		</div><!-- /row -->
 		
 		<div class="row mt centered">
 			<div class="col-lg-4">
 				<img src="assets/img/ser01.png" width="180" alt="">
-				<h4>1 - Browser Compatibility</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+				<h4>1 - How confident are you in your success at this company?</h4>
+				<p>Your employees are the driving force behind your company, and a
+					confident employee is your most important asset.</p>
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img src="assets/img/ser02.png" width="180" alt="">
-				<h4>2 - Email Campaigns</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+				<h4>2 - How confident are you that this company will be successful?</h4>
+				<p>Have your finger on the pulse of the overall opinion of your
+					company at large. Compare these metrics over time for real-time
+					business analytics.</p>
 
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img src="assets/img/ser03.png" width="180" alt="">
-				<h4>3 - Gather Your Notes</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+				<h4>3 - Profit!!</h4>
+				<p>Okay, so you still have to actually work. But Happy Meter will bring
+					you one step closer to answering that all important question... 
+					How are we doing?</p>
 
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
