--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 					</form>					
 				</div><!-- /col-lg-6 -->
 				<div class="col-lg-6">
-					<img class="img-responsive" src="assets/img/ipad-hand.png" alt="">
+					<img class="img-android" src="assets/img/tile-launcher-2.png" alt="coworkers end">
+          <img class="img-content" src="assets/img/settings.jpg" alt="coworkers end">
 				</div><!-- /col-lg-6 -->
 				
 			</div><!-- /row -->
