Fixes some screenshots

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
 	<div id="headerwrap">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
+			<div class="row banner-pic">
+				<div class="col-lg-6 banner">
 					<h1>This is Happy Meter.</h1>			
 				</div><!-- /col-lg-6 -->
 				<div class="col-lg-6">
-					<img class="img-android" src="assets/img/tile-launcher-2.png" alt="coworkers end">
-          <img class="img-content" src="assets/img/settings.jpg" alt="coworkers end">
+					<img src="assets/img/finalpage.jpg" alt="coworkers end">
+          <!-- <img class="img-content" src="assets/img/settings.jpg" alt="coworkers end"> -->
 				</div><!-- /col-lg-6 -->
 				
 			</div><!-- /row -->
