--- a/index.html
+++ b/index.html
@@ -65,65 +65,76 @@
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
 	
-	
+<!-- Template that user will receive via email when verifying.  Build a sleek template
+ with nice text using only HTML and Bootstrap CSS. Images are OK, but don't use any JavaScript.  
+ Suggestions: Thanks message, "we won't spam you" text, quick value prop, button to verify, 
+ button for "I didn't sign up for this,"  social media links.  Test it on a phone/mobile device.
+
+Subject: Thanks for joining the graph! [Verification]   
+
+Welcome to Happy Meter, 
+You’ve probably joined us from a friend’s referral. 
+Thats great news! Happy Meter is all about understanding your whole organization.
+
+We are on a mission to give happiness its place alongside classic performance analytics like ROI, Adoption Rate
+
+
+Have you ever wondered what a company would be like if it truly 
+understood the needs of its employees? Until now, there have been practical barriers, but Happy
+ Meter, is committed to make this possible. 
+
+
+What fuels the engine of a successful company? Successful employees. Happy employees. 
+What would it be like to work for a company that truly understands the needs of its employees? 
+ -->
+
+
+
 	<div class="container">
 		<div class="row mt centered">
 			<div class="col-lg-6 col-lg-offset-3">
 				<h1>Employee Satisfaction Info<br/>At your fingertips.</h1>
-				<h3>Happy meter determines how confident employees are in their
-					success by asking 2 simple questions.</h3>
+				<h3>Have you ever wondered what a company would be like if it truly understood the needs of its employees? Until
+          now, there have been practical barriers, but Happy Meter is committed to make this possible</h3>
 			</div>
 		</div><!-- /row -->
 		
 		<div class="row mt centered">
 			<div class="col-lg-4">
-				<img src="assets/img/ser01.png" width="180" alt="">
-				<h4>1 - How confident are you in your success at this company?</h4>
+				<img src="assets/img/touchAndHold.jpg" height="400" alt="">
+				<h4>1 - How confident are your employees in their success?</h4>
 				<p>Your employees are the driving force behind your company, and a
 					confident employee is your most important asset.</p>
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
-				<img src="assets/img/ser02.png" width="180" alt="">
-				<h4>2 - How confident are you that this company will be successful?</h4>
-				<p>Have your finger on the pulse of the overall opinion of your
-					company at large. Compare these metrics over time for real-time
-					business analytics.</p>
+				<img src="assets/img/touch_fully_completed.jpg" height="400" alt="">
+				<h4>2 - Simple, intuitive, pictoral representation</h4>
+				<p>Employees can submit their real-time sentiments once per day with a simple touch
+          and hold</p>
 
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
-				<img src="assets/img/ser03.png" width="180" alt="">
-				<h4>3 - Profit!!</h4>
-				<p>Okay, so you still have to actually work. But Happy Meter will bring
-					you one step closer to answering that all important question... 
-					How are we doing?</p>
+				<img src="assets/img/coworker_medium.jpg" height="400" alt="">
+				<h4>3 - Understand your employees real-time sentiments</h4>
+				<p>Have your finger on the pulse of the overall opinion of your
+          company at large. Compare these metrics over time for real-time
+          business analytics.</p>
 
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
 	</div><!-- /container -->
+
+
 	
 	<div class="container">
-		<hr>
-		<div class="row centered">
-			<div class="col-lg-6 col-lg-offset-3">
-				<form class="form-inline" role="form">
-				  <div class="form-group">
-				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">
-				  </div>
-				  <button type="submit" class="btn btn-warning btn-lg">Invite Me!</button>
-				</form>					
-			</div>
-			<div class="col-lg-3"></div>
-		</div><!-- /row -->
-		<hr>
-	</div><!-- /container -->
-	
-	<div class="container">
+    <hr>
 		<div class="row mt centered">
 			<div class="col-lg-6 col-lg-offset-3">
-				<h1>Flatty is for Everyone.</h1>
-				<h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
+				<h1>Happy Meter is for Everyone.</h1>
+				<h3>Whether you're an intern or a high-powered executive, Happy Meter allows you to anonymously broadcast your sentiments
+          and better understand the sentiments of your fellow co-workers in real-time</h3>
 			</div>
 		</div><!-- /row -->
 	
@@ -131,6 +142,18 @@
 		<div class="row mt centered">
 			<div class="col-lg-6 col-lg-offset-3">
 				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img class="carousel-img" src="assets/img/email.jpg" alt="">
+            </div>
+            <div class="item">
+              <img class="carousel-img" src="assets/img/verify.jpg" alt="">
+            </div>
+            <div class="item">
+              <img class="carousel-img" src="assets/img/coworker_end.jpg" alt="">
+            </div>
+          </div>
 				  <!-- Indicators -->
 				  <ol class="carousel-indicators">
 				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -138,19 +161,7 @@
 				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 				  </ol>
 				
-				  <!-- Wrapper for slides -->
-				  <div class="carousel-inner">
-				    <div class="item active">
-				      <img src="assets/img/p01.png" alt="">
-				    </div>
-				    <div class="item">
-				      <img src="assets/img/p02.png" alt="">
-				    </div>
-				    <div class="item">
-				      <img src="assets/img/p03.png" alt="">
-				    </div>
-				  </div>
-				</div>			
+        </div>      
 			</div><!-- /col-lg-8 -->
 		</div><!-- /row -->
 	</div><! --/container -->
@@ -163,7 +174,7 @@
 				  <div class="form-group">
 				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">
 				  </div>
-				  <button type="submit" class="btn btn-warning btn-lg">Invite Me!</button>
+				  <button type="submit" class="btn btn-success btn-lg">Invite Me!</button>
 				</form>					
 			</div>
 			<div class="col-lg-3"></div>
@@ -202,24 +213,6 @@
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
 	</div><!-- /container -->
-	
-	<div class="container">
-		<hr>
-		<div class="row centered">
-			<div class="col-lg-6 col-lg-offset-3">
-				<form class="form-inline" role="form">
-				  <div class="form-group">
-				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">
-				  </div>
-				  <button type="submit" class="btn btn-warning btn-lg">Invite Me!</button>
-				</form>					
-			</div>
-			<div class="col-lg-3"></div>
-		</div><!-- /row -->
-		<hr>
-		<p class="centered">Created by BlackTie.co - Attribution License 3.0 - 2013</p>
-	</div><!-- /container -->
-	
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
