--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@ What would it be like to work for a company that truly understands the needs of 
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
-				<img class="img-circle" src="assets/img/pic3.jpg" width="140" alt="">
-				<h4>Angelica Finning</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+				<img class="img-circle" src="assets/img/greenShirt.jpeg" width="140" alt="">
+				<h4>Keith Grout</h4>
+				<p>Keith Grout is a full-stack developer from beautiful Southern California. In addition to keeping up with the latest technologies, he enjoys spending time at the beach and exploring Los Angeles!</p>
 				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
