Adds Andrew and Ryan Stellar to team

--- a/index.html
+++ b/index.html
@@ -185,31 +185,37 @@ What would it be like to work for a company that truly understands the needs of 
 	<div class="container">
 		<div class="row mt centered">
 			<div class="col-lg-6 col-lg-offset-3">
-				<h1>Our Awesome Team.<br/>Design Lovers.</h1>
-				<h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
+				<h1>Our Awesome Team.</h1>
 			</div>
 		</div><!-- /row -->
-		
+
 		<div class="row mt centered">
-			<div class="col-lg-4">
-				<img class="img-circle" src="assets/img/pic1.jpg" width="140" alt="">
-				<h4>Michael Robson</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+      <div class="col-md-3">
+        <img class="img-circle" src="assets/img/ryanstellar.jpg" width="140" alt="">
+        <h4>Ryan Stellar</h4>
+        <p>Ryan Stellar is the man with the plan.</p>
+        <p><a href="http://www.hackreactor.com/team/"><i class="glyphicon glyphicon-globe"></i></a></p>
+      </div><!--/col-lg-4 -->
+    
+			<div class="col-md-3">
+				<img class="img-circle" src="assets/img/andrew.jpg" width="140" alt="">
+				<h4>Andrew Jones</h4>
+				<p>Andrew Jones is a full-stack software engineer from San Francisco. When he's not developing, he seeks out epic long-distance running, hiking, and biking sufferfests.</p>
+				<p><a href="http://www.andrewjones.us"><i class="glyphicon glyphicon-globe"></i></a></p>
 			</div><!--/col-lg-4 -->
 
-			<div class="col-lg-4">
+			<div class="col-md-3">
 				<img class="img-circle" src="assets/img/pic2.jpg" width="140" alt="">
-				<h4>Pete Ford</h4>
+				<h4>Steve Hall</h4>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+        <p><i class="glyphicon glyphicon-globe"></i></p>
 			</div><!--/col-lg-4 -->
 
-			<div class="col-lg-4">
+			<div class="col-md-3">
 				<img class="img-circle" src="assets/img/greenShirt.jpeg" width="140" alt="">
 				<h4>Keith Grout</h4>
 				<p>Keith Grout is a full-stack developer from beautiful Southern California. In addition to keeping up with the latest technologies, he enjoys spending time at the beach and exploring Los Angeles!</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+				<p><a href="http://www.keithgrout.com"><i class="glyphicon glyphicon-globe"></i></a></p>
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
 	</div><!-- /container -->
