Adds Steve Hall and Ryan Stellar bio and pictures

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     </div> -->
 
 <!--/.nav-collapse -->
+  <!-- Created at Hack Reactor Banner -->
+  <a href="http://hackreactor.com"> 
+    <img style="position: fixed; top: 0; right: 0; border: 0;" src="http://i.imgur.com/x86kKmF.png" alt="Built at Hack Reactor">
+  </a>
 
 	<div id="headerwrap">
 		<div class="container">
@@ -138,10 +142,10 @@ What would it be like to work for a company that truly understands the needs of 
 			</div>
 		</div><!-- /row -->
 	
-		<! -- CAROUSEL -->
+		<!-- CAROUSEL -->
 		<div class="row mt centered">
 			<div class="col-lg-6 col-lg-offset-3">
-				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="6000">
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
@@ -160,7 +164,13 @@ What would it be like to work for a company that truly understands the needs of 
 				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 				  </ol>
-				
+          <!-- Arrow controls  -->
+				  <!-- <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a> -->
         </div>      
 			</div><!-- /col-lg-8 -->
 		</div><!-- /row -->
@@ -193,7 +203,7 @@ What would it be like to work for a company that truly understands the needs of 
       <div class="col-md-3">
         <img class="img-circle" src="assets/img/ryanstellar.jpg" width="140" alt="">
         <h4>Ryan Stellar</h4>
-        <p>Ryan Stellar is the man with the plan.</p>
+        <p>Ryan Stellar is the man with the plan. During the few moments when he's not busy shifting paradigms, he is cracking jokes and stacking stacks.</p>
         <p><a href="http://www.hackreactor.com/team/"><i class="glyphicon glyphicon-globe"></i></a></p>
       </div><!--/col-lg-4 -->
     
@@ -205,10 +215,10 @@ What would it be like to work for a company that truly understands the needs of 
 			</div><!--/col-lg-4 -->
 
 			<div class="col-md-3">
-				<img class="img-circle" src="assets/img/pic2.jpg" width="140" alt="">
+				<img class="img-circle" src="assets/img/SteveHall.jpg" width="140" alt="">
 				<h4>Steve Hall</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-        <p><i class="glyphicon glyphicon-globe"></i></p>
+				<p>Steve Hall is a full-stack JavaScript engineer in the San Francisco Bay Area. Away from the keyboard, he enjoys traveling the world, hiking in the great outdoors, and playing guitar.</p>
+        <p><a href="https://github.com/sghall"><i class="glyphicon glyphicon-globe"></i></a></p>
 			</div><!--/col-lg-4 -->
 
 			<div class="col-md-3">
@@ -225,10 +235,6 @@ What would it be like to work for a company that truly understands the needs of 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/landing.js"></script>
-
-        <!-- Created at Hack Reactor banner -->
-  
 
   </body>
 </html>
